<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Linhas de guia -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10218978" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9026764" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <!-- Capa -->
    <ImageView
        android:id="@+id/imageCapa"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        android:src="@drawable/capa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Menu de navegação -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/logomovie" />

    <TextView
        android:id="@+id/textSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/series"
        android:textColor="@color/menu_navegacao"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logomovie"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintEnd_toStartOf="@id/textFilmes"/>

    <TextView
        android:id="@+id/textFilmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmes"
        android:textColor="@color/menu_navegacao"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logomovie"
        app:layout_constraintStart_toEndOf="@id/textSeries"
        app:layout_constraintEnd_toStartOf="@id/textMinhaLista"/>

    <TextView
        android:id="@+id/textMinhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minha_lista"
        android:textColor="@color/menu_navegacao"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logomovie"
        app:layout_constraintEnd_toStartOf="@id/guideline3"/>

    <!-- Texto do filme -->
    <ImageView
        android:id="@+id/logomovie"
        android:layout_width="226dp"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:srcCompat="@drawable/logomovie" />

    <!-- Botões -->
    <Button
        android:id="@+id/buttonAssistir"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/primaria"
        android:text="@string/assistir"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="@id/imageCapa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/button_minhaLista"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@android:drawable/ic_input_add"
        android:drawableTint="@color/branco"
        android:padding="0dp"
        android:text="@string/minha_lista_button"
        android:textAlignment="center"
        android:textColor="@color/branco"
        app:iconSize="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imageCapa"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/button_detalhes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@android:drawable/ic_dialog_info"
        android:drawableTint="@color/branco"
        android:padding="0dp"
        android:text="@string/detalhes"
        android:textAlignment="center"
        android:textColor="@color/branco"
        app:iconSize="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imageCapa"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <!-- Tags -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acao"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@id/button_minhaLista"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superherois"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@id/buttonAssistir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scifi"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@id/button_detalhes"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"/>

    <!-- Seção de lançamento -->
    <TextView
        android:id="@+id/lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lancamento"
        android:textColor="@color/menu_navegacao"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/imageCapa"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/f1"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/lancamento"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/f2"
        app:layout_constraintTop_toBottomOf="@id/lancamento"
        app:layout_constraintStart_toEndOf="@id/imageView7"
        app:layout_constraintEnd_toStartOf="@id/imageView9" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/f3"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/lancamento"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="João Vitor Chmielewski Alcure"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="693dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView8"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>